Fix: Aligned Button Block in Cover Block (#919)
* Fix: Aligned Button Block in Cover Block

* Sync changes with RTL

* Whoops - put the code in the correct section

* Use initial selector

* Sync RTL again

* Address review

* Whoops!

* Update RTL file

* Add RTL ignores for breakpoints

* Updated RTL file

* Whitespace updates

--- a/style-rtl.css
+++ b/style-rtl.css
@@ -2179,11 +2179,11 @@ body.template-full-width .entry-content {
 }
 
 body.template-full-width .entry-content .alignleft {
-	margin-right: 0;
+	margin-left: 0;
 }
 
 body.template-full-width .entry-content .alignright {
-	margin-left: 0;
+	margin-right: 0;
 }
 
 /* -------------------------------------------------------------------------- */
@@ -4372,11 +4372,15 @@ a.to-the-top > * {
 
 	/* ALIGNMENT CLASSES */
 
-	.entry-content .alignleft {
+	.entry-content > .alignleft,
+	.entry-content > p .alignleft,
+	.entry-content > .wp-block-image .alignleft {
 		margin-left: calc(( 100vw - 58rem - 8rem ) / -2);
 	}
 
-	.entry-content .alignright {
+	.entry-content > .alignright, 
+	.entry-content > p .alignright, 
+	.entry-content > .wp-block-image .alignright {
 		margin-right: calc(( 100vw - 58rem - 8rem ) / -2);
 	}
 
@@ -4990,11 +4994,11 @@ a.to-the-top > * {
 	}
 
 	.alignleft {
-		margin: 0.3rem 0 2rem 2rem;
+		margin: 0.3rem 2rem 2rem 0;
 	}
 
 	.alignright {
-		margin: 0.3rem 2rem 2rem 0;
+		margin: 0.3rem 0 2rem 2rem;
 	}
 
 	.alignwide,
@@ -5779,11 +5783,15 @@ a.to-the-top > * {
 
 	/* ALIGNMENT CLASSES */
 
-	.entry-content .alignleft {
+	.entry-content > .alignleft,
+	.entry-content > p .alignleft,
+	.entry-content > .wp-block-image .alignleft {
 		margin-left: -31rem;
 	}
 
-	.entry-content .alignright {
+	.entry-content > .alignright, 
+	.entry-content > p .alignright, 
+	.entry-content > .wp-block-image .alignright {
 		margin-right: -31rem;
 	}
 
